Modifications et test du déploiement

--- a/public/index.html
+++ b/public/index.html
@@ -103,8 +103,8 @@
 			class="block md:flex relative group p-6 lg:p-10 space-y-6 md:space-x-6 my-14 bg-zinc-100 rounded-3xl hover:bg-blue-100">
 			<figure class="basis-1/2 w-full aspect-video overflow-hidden rounded-2xl border">
 				<img class="object-cover group-hover:scale-105 transition duration-500 cursor-pointer"
-					src="http://localhost:1313/images/daniele-colucci-OtXJhYjbKeg-unsplash_hu8302689208946992601.jpg"
-					alt="Pehtheme" width="720" height="405">
+					src="http://localhost:1313/images/pub-parfum-j-adore-dior_hu1540539160974832036.jpg" alt="Pehtheme"
+					width="720" height="405">
 
 			</figure>
 			<div class="basis-1/2 self-center">
